--- a/src/components/TextWithBtns/textWithBtns.module.css
+++ b/src/components/TextWithBtns/textWithBtns.module.css
@@ -2,7 +2,7 @@
   display: flex;
   justify-content: space-between;
   border: 1px solid black;
-  width: 330px;
+  width: 400px;
   height: 100px;
   padding: 5px;
 }
@@ -25,4 +25,5 @@
 }
 .text {
   background-color: white;
+  height: 20px;
 }
